components/namespace-lister/policies/ns-label/.chainsaw-test/resources/actual-namespace-konflux.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: namespace-konflux
  labels:
    konflux.ci/type: user
