components/namespace-lister/policies/ns-label/.chainsaw-test/resources/actual-namespace-unlabeled.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: (join('-', [$namespace, 'konflux']))
