components/namespace-lister/policies/ns-label/namespace-enforce-label-clusterpolicy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mutate-namespace-enforce-label
spec:
  rules:
    - name: mutate-namespace-enforce-label
      match:
        any:
        - resources:
            kinds:
            - v1/Namespace
            selector:
              matchLabels:
                toolchain.dev.openshift.com/type: tenant
        - resources:
            kinds:
            - v1/Namespace
            selector:
              matchLabels:
                konflux.ci/type: user
      mutate:
        mutateExistingOnPolicyUpdate: true
        targets:
        - apiVersion: v1
          kind: Namespace
          name: "{{ request.object.metadata.name }}"
        patchStrategicMerge:
          metadata:
            labels:
              konflux-ci.dev/type: tenant
