components/namespace-lister/policies/ns-label/.chainsaw-test/resources/expected-namespace-konflux-toolchain.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: (join('-', [$namespace, 'konflux']))
  labels:
    konflux.ci/type: user
    konflux-ci.dev/type: tenant
    toolchain.dev.openshift.com/type: tenant
