components/namespace-lister/policies/ns-label/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: mutate-namespace-konflux
spec:
  concurrent: false
  steps:
  - name: given-kyverno-has-permission-on-namespaces
    try:
    - apply:
        file: ../kyverno-background-konflux-ns-label-clusterrole.yaml
  - name: given-label-cluster-policy-is-ready
    try:
    - apply:
        file: ../namespace-enforce-label-clusterpolicy.yaml
    - assert:
        file: chainsaw-assert-clusterpolicy.yaml
  - name: when-konfluxci-labeled-namespace-is-created
    try:
    - apply:
        file: resources/actual-namespace-konflux.yaml
        template: true
  - name: then-all-labels-are-injected
    try:
    - assert:
        file: resources/expected-namespace-konflux.yaml
        template: true
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: mutate-namespace-toolchain
spec:
  concurrent: false
  steps:
  - name: given-kyverno-has-permission-on-namespaces
    try:
    - apply:
        file: ../kyverno-background-konflux-ns-label-clusterrole.yaml
  - name: given-label-cluster-policy-is-ready
    try:
    - apply:
        file: ../namespace-enforce-label-clusterpolicy.yaml
    - assert:
        file: chainsaw-assert-clusterpolicy.yaml
  - name: when-konfluxci-labeled-namespace-is-created
    try:
    - apply:
        file: resources/actual-namespace-toolchain.yaml
        template: true
  - name: then-all-labels-are-injected
    try:
    - assert:
        file: resources/expected-namespace-toolchain.yaml
        template: true
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: mutate-namespace-konflux-toolchain
spec:
  concurrent: false
  steps:
  - name: given-kyverno-has-permission-on-namespaces
    try:
    - apply:
        file: ../kyverno-background-konflux-ns-label-clusterrole.yaml
  - name: given-label-cluster-policy-is-ready
    try:
    - apply:
        file: ../namespace-enforce-label-clusterpolicy.yaml
    - assert:
        file: chainsaw-assert-clusterpolicy.yaml
  - name: when-konfluxci-labeled-namespace-is-created
    try:
    - apply:
        file: resources/actual-namespace-konflux-toolchain.yaml
        template: true
  - name: then-all-labels-are-injected
    try:
    - assert:
        file: resources/expected-namespace-konflux-toolchain.yaml
        template: true
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: mutate-namespace-unlabeled
spec:
  concurrent: false
  steps:
  - name: given-kyverno-has-permission-on-namespaces
    try:
    - apply:
        file: ../kyverno-background-konflux-ns-label-clusterrole.yaml
  - name: given-label-cluster-policy-is-ready
    try:
    - apply:
        file: ../namespace-enforce-label-clusterpolicy.yaml
    - assert:
        file: chainsaw-assert-clusterpolicy.yaml
  - name: when-konfluxci-unlabeled-namespace-is-created
    try:
    - apply:
        file: resources/actual-namespace-unlabeled.yaml
        template: true
  - name: then-no-labels-are-injected
    try:
    - assert:
        file: resources/expected-namespace-unlabeled.yaml
        template: true
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: mutate-namespace-existing-konflux
spec:
  concurrent: false
  steps:
  - name: given-kyverno-has-permission-on-namespaces
    try:
    - apply:
        file: ../kyverno-background-konflux-ns-label-clusterrole.yaml
  - name: given-konfluxci-labeled-namespace-is-created
    try:
    - apply:
        file: resources/actual-namespace-konflux.yaml
        template: true
  - name: when-label-cluster-policy-is-ready
    try:
    - apply:
        file: ../namespace-enforce-label-clusterpolicy.yaml
    - assert:
        file: chainsaw-assert-clusterpolicy.yaml
  - name: then-all-labels-are-injected
    try:
    - assert:
        file: resources/expected-namespace-konflux.yaml
        template: true
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: mutate-namespace-existing-toolchain
spec:
  concurrent: false
  steps:
  - name: given-kyverno-has-permission-on-namespaces
    try:
    - apply:
        file: ../kyverno-background-konflux-ns-label-clusterrole.yaml
  - name: given-toolchain-labeled-namespace-is-created
    try:
    - apply:
        file: resources/actual-namespace-toolchain.yaml
        template: true
  - name: when-label-cluster-policy-is-ready
    try:
    - apply:
        file: ../namespace-enforce-label-clusterpolicy.yaml
    - assert:
        file: chainsaw-assert-clusterpolicy.yaml
  - name: then-all-labels-are-injected
    try:
    - assert:
        file: resources/expected-namespace-toolchain.yaml
        template: true
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: mutate-namespace-existing-konflux-toolchain
spec:
  concurrent: false
  steps:
  - name: given-kyverno-has-permission-on-namespaces
    try:
    - apply:
        file: ../kyverno-background-konflux-ns-label-clusterrole.yaml
  - name: given-konfluxci-labeled-namespace-is-created
    try:
    - apply:
        file: resources/actual-namespace-konflux-toolchain.yaml
        template: true
  - name: when-label-cluster-policy-is-ready
    try:
    - apply:
        file: ../namespace-enforce-label-clusterpolicy.yaml
    - assert:
        file: chainsaw-assert-clusterpolicy.yaml
  - name: then-all-labels-are-injected
    try:
    - assert:
        file: resources/expected-namespace-konflux-toolchain.yaml
        template: true
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: mutate-namespace-existing-unlabeled
spec:
  concurrent: false
  steps:
  - name: given-kyverno-has-permission-on-namespaces
    try:
    - apply:
        file: ../kyverno-background-konflux-ns-label-clusterrole.yaml
  - name: given-konfluxci-unlabeled-namespace-is-created
    try:
    - apply:
        file: resources/actual-namespace-unlabeled.yaml
        template: true
  - name: when-label-cluster-policy-is-ready
    try:
    - apply:
        file: ../namespace-enforce-label-clusterpolicy.yaml
    - assert:
        file: chainsaw-assert-clusterpolicy.yaml
  - name: then-no-labels-are-injected
    try:
    - assert:
        file: resources/expected-namespace-unlabeled.yaml
        template: true
